--- a/frontend/A N S/src/App.css
+++ b/frontend/A N S/src/App.css
@@ -1,42 +1,17 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+::-webkit-scrollbar {
+    width: 12px;
   }
-  to {
-    transform: rotate(360deg);
+  
+  ::-webkit-scrollbar-track {
+    background: #19394B; 
   }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #BAAE98; 
+    border-radius: 10px;
+    border: 3px solid #19394B; 
   }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #BAAE98; 
+  }
